console-chat/src/screens/snapshots/Console_Chat__screens__login__tests__render_home.snap
---
source: src/screens/login.rs
expression: terminal.backend()
---
"╔══════════════════════════════════════════════════════════════════════════════╗"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║            ╭────────────────────────────────────────────────────╮            ║"
"║            │Username                                            │            ║"
"║            ╰────────────────────────────────────────────────────╯            ║"
"║            ╭────────────────────────────────────────────────────╮            ║"
"║            │Password                                            │            ║"
"║            ╰────────────────────────────────────────────────────╯            ║"
"║            ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔            ║"
"║                       Login                     Anonym                       ║"
"║            ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁            ║"
"║            ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔            ║"
"║                                     Exit                                     ║"
"║            ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁            ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
